--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/socialite": "^5.23",
         "laravel/tinker": "^2.10.1",
         "pusher/pusher-php-server": "^7.2",
+        "stripe/stripe-php": "^17.5",
         "tymon/jwt-auth": "^2.2"
     },
     "require-dev": {
